# titiler-covjson

./: .dockerignore  .editorconfig  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml
docker/: Dockerfile  app.py  check_sample.py  make_sample_cog.py  smoke.py
docker/data/: sample.tif
docs/: 01-design-overview.md  02-api-definition.md  03-data-model-reference.md  04-modeler-converter-design.md  05-implementation-roadmap.md  06-existing-libraries-analysis.md  07-api-design-alternatives.md  08-bbox-endpoint-spec.md
docs/adr/: 0001-covjson-http-api-direction.md  0002-dependency-floor-policy.md  0003-dataset-open-read-error-status.md  0004-non-temporal-surface-edr-query-verbs.md  0005-trajectory-temporal-multipoint-non-temporal.md  README.md  template.md
examples/: dev_app.py
scripts/: pin-precommit-shas.sh
src/titiler_covjson/: __init__.py  dependencies.py  factory.py  geometry.py  helpers.py  input.py  modeler.py  reduce.py  responses.py  router.py  routes.py  wkt.py
tests/: conftest.py  test_conftest.py  test_dependencies.py  test_factory.py  test_geometry.py  test_helpers.py  test_input.py  test_modeler.py  test_playground_roundtrip.py  test_reduce.py  test_responses.py  test_spec_roundtrip.py  test_wkt.py
