[project]
name = "titiler-covjson"
version = "0.1.0"
description = "CoverageJSON output format and API extension for TiTiler"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Emmanuel Mathot", email = "emmanuel@developmentseed.org" },
    { name = "Chuck Daniels", email = "chuck@developmentseed.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
dependencies = [
    "titiler.core>=0.18.0",
    "covjson-pydantic>=0.7.0,<1.0",
    "rio-tiler>=7.0.0",
    "shapely>=2.0",
    "numpy>=2.2.6",
]

[project.urls]
Homepage = "https://github.com/DevelopmentSeed/titiler-covjson"
Documentation = "https://github.com/DevelopmentSeed/titiler-covjson"
Repository = "https://github.com/DevelopmentSeed/titiler-covjson"
Issues = "https://github.com/DevelopmentSeed/titiler-covjson/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
    "pre-commit",
    "types-shapely>=2.1.0.20260508",
    "jsonschema>=4.26.0",
    "types-jsonschema>=4.26.0.20260508",
]
docs = ["mkdocs", "mkdocs-material"]

[tool.hatch.build.targets.wheel]
packages = ["src/titiler_covjson"]

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
asyncio_mode = "auto"
addopts = ["--doctest-modules"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
preview = true
select = [
    "B",
    "DOC",
    "E",
    "F",
    "FURB",
    "I",
    "N",
    "NPY",
    "PERF",
    "TRY",
    "UP",
    "W",
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["rasterio", "rasterio.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_calls = false
