[project]
name = "titiler-covjson"
version = "0.1.0"
description = "CoverageJSON output format and API extension for TiTiler"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Emmanuel Mathot", email = "emmanuel@developmentseed.org" },
    { name = "Chuck Daniels", email = "chuck@developmentseed.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
dependencies = [
    "titiler.core>=2.0,<3.0",
    "rio-tiler>=9.0,<10.0",
    "covjson-pydantic>=0.8.0,<1.0",
    "shapely>=2.0",
    "numpy>=2.4.6",
    "ucumvert>=0.2.2",
]

[project.urls]
Homepage = "https://github.com/DevelopmentSeed/titiler-covjson"
Documentation = "https://github.com/DevelopmentSeed/titiler-covjson"
Repository = "https://github.com/DevelopmentSeed/titiler-covjson"
Issues = "https://github.com/DevelopmentSeed/titiler-covjson/issues"

[build-system]
# hatchling >= 1.27 defaults to core metadata 2.4, required to emit the PEP 639
# SPDX `license` expression and `license-files` declared in [project].
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
    "prek",
    "types-shapely>=2.1.0.20260508",
    "jsonschema>=4.26.0",
    "types-jsonschema>=4.26.0.20260508",
]
docs = ["mkdocs", "mkdocs-material"]

[tool.hatch.build.targets.wheel]
packages = ["src/titiler_covjson"]

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
asyncio_mode = "auto"
addopts = ["--doctest-modules"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[tool.coverage.run]
source = ["src/titiler_covjson"]
branch = true

# No [tool.ruff] target-version: ruff infers it from project.requires-python.
[tool.ruff.lint]
preview = true
select = [
    "B",
    "DOC",
    "E",
    "EM",
    "F",
    "FURB",
    "I",
    "N",
    "NPY",
    "PERF",
    "TID",
    "TRY",
    "UP",
    "W",
]

[tool.ruff.lint.flake8-tidy-imports]
# Convention: absolute imports only, never relative (see AGENTS.md Code style).
ban-relative-imports = "all"

[tool.mypy]
files = ["src", "tests"]
# No python_version: mypy uses the running interpreter, and the CI typecheck
# matrix runs it under every supported version (the lowest covers the
# requires-python floor) -- so the version is not duplicated here.
strict = true

[[tool.mypy.overrides]]
module = ["rasterio", "rasterio.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ucumvert", "ucumvert.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["conftest", "test_helpers", "test_input", "test_playground_roundtrip", "test_spec_roundtrip"]
disallow_untyped_calls = false
